eks/load-test/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: load-test.getanton.com
    http:
      paths:
      - backend:
          service:
            name: svc-k6
            port: 
              number: 80
        path: /
        pathType: Prefix
